# geogram

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  NOSTR.md  README.md  analysis_options.yaml  build-windows.bat  deploy-console-vm.sh  deploy_server.sh  geogram-station.service  install-flutter.sh  install-vs-buildtools.bat  install.sh  launch-android.sh  launch-cli.sh  launch-desktop.bat  launch-desktop.sh  launch-web.sh  launch-with-local-relay.sh  launch-with-local-station.sh  pubspec.yaml  rebuild-desktop.sh  release.sh  run_tests.sh  server-deploy.sh  server-monitor.sh  server-restart.sh  server_monitor.sh  setup-local-station.sh  setup.sh  station_config.json
.claude/rules/: total-recall.md
.githooks/: pre-commit
.github/workflows/: build-all-platforms.yml  build-android.yml  build-cli.yml  build-esp32.yml  build-ios.yml  build-linux.yml  build-macos.yml  build-web.yml  build-windows.yml
CLA/: README.md  TEMPLATE.md
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
assets/: dbip-city-lite.mmdb
docs/: API.md  API_feedback.md  API_p2p.md  API_synch.md  EventBus.md  NOSTR.md  PRIVACY_POLICY.md  chat-api.md  command-line-switches.md  consolidation-plan.md  data-transmission.md  downloads.md  log.md  mirror.md  relay-implementation-plan.md  reusable.md  security-settings.md  station-implementation-plan.md  station-server-deployment.md  summary.md  supported-file-types.md  technical.md  voice.md  webpages.md
docs/apps/: alert-format-specification.md  backup-format-specification.md  blog-format-specification.md  bot-format-specification.md  chat-format-specification.md  console-format-specification.md  contacts-format-specification.md  email-format-specification.md  events-format-specification.md  extension-mechanism.md  flasher-format-specification.md  forum-format-specification.md  groups-format-specification.md  installer-format-specification.md  js-runtime-api.md  market-format-specification.md  news-format-specification.md  (+12 more)
esp32/: CMakeLists.txt  README.md  flash-c3.sh  monitor-capture.sh  monitor.sh  platformio.ini  sdkconfig.defaults  sdkconfig.esp32_generic  sdkconfig.esp32c3_mini  sdkconfig.esp32s3_epaper_1in54  sdkconfig.heltec_v1  sdkconfig.heltec_v2  sdkconfig.heltec_v3  upload.sh
esp32/components/geogram_console/: CMakeLists.txt  cmd_config.c  cmd_display.c  cmd_ftp.c  cmd_mesh.c  cmd_ssh.c  cmd_system.c  cmd_wifi.c  console.c  console.h
esp32/components/geogram_epaper_1in54/: CMakeLists.txt  epaper_1in54.cpp  epaper_1in54.h  lut_tables.h
esp32/components/geogram_ftp/: CMakeLists.txt  ftp_server.c  ftp_server.h
esp32/components/geogram_http/: CMakeLists.txt  http_server.c  http_server.h
esp32/components/geogram_led/: CMakeLists.txt  led_bsp.c
esp32/components/geogram_led/include/: led_bsp.h
esp32/components/geogram_lvgl/: CMakeLists.txt  lv_conf.h  lvgl_port.c  lvgl_port.h
esp32/components/geogram_mesh/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  mesh_bridge.c  mesh_bsp.c  mesh_bsp.h  mesh_chat.c
esp32/components/geogram_mesh/include/: mesh_bsp.h  mesh_chat.h
esp32/components/geogram_model_epaper_1in54/: CMakeLists.txt  board_power.cpp  board_power.h  model_config.h  model_init.c  model_init.h
esp32/components/geogram_model_heltec_v1/: CMakeLists.txt  model_config.h  model_init.h
esp32/components/geogram_model_heltec_v2/: CMakeLists.txt  model_config.h  model_init.c
esp32/components/geogram_sdcard/: CMakeLists.txt  sdcard.c  sdcard.h
esp32/components/geogram_shtc3/: CMakeLists.txt  shtc3.cpp  shtc3.h
esp32/components/geogram_station/: CMakeLists.txt  station.c  station.h
esp32/components/geogram_tiles/: CMakeLists.txt  tiles.c  tiles.h
esp32/components/geogram_ui/: CMakeLists.txt  geogram_ui.c  geogram_ui.h
esp32/components/geogram_updates/: CMakeLists.txt  updates.c  updates.h
esp32/components/jimmyw__ssh_cli_server/: .clang-tidy  .clangd  .component_hash  .gitignore  CMakeLists.txt  LICENSE  README.md  idf_component.yml
esp32/components/jimmyw__ssh_cli_server/examples/example_ssh_server/: CMakeLists.txt  idf_component.yml  sdkconfig.defaults
esp32/components/jimmyw__ssh_cli_server/examples/example_ssh_server/components/cmd_system/: CMakeLists.txt  cmd_system.c  cmd_system.h
esp32/components/jimmyw__ssh_cli_server/examples/example_ssh_server/main/: CMakeLists.txt  Kconfig.projbuild  console_settings.c  idf_component.yml  ssh_example_main.c
esp32/components/jimmyw__ssh_cli_server/include/: ssh_server.h
esp32/components/jimmyw__ssh_cli_server/src/: ssh_server.c
fastlane/: Appfile  Fastfile
fdroid/: dev.geogram.yml
flasher/: metadata.json
games/: azurath-ruins.md  tutorial.md
geogram-cli/: pubspec.yaml
installer/: generate_icon.ps1  geogram.iss  portable.marker
integration_test/: flash_esp32_test.dart
languages/: en_US.json  pt_PT.json
lib/: main.dart  station.dart  version.dart
linux/: CMakeLists.txt
macos/: Podfile
scripts/: test_alert_feedback.sh
sounds/: LICENSE.txt  README.md  tracks.json
test/: run_dm_test.sh  tile_relay_test.dart  tile_source_test.dart  tile_station_test.dart
tests/: alert_photo_test.dart  app_alert_test.dart  app_email_test.dart  ble_android_android.sh  feedback_race_condition_test.dart  nostr_vanity_generator.dart  run_alert_photo_test.sh  run_backup_test.sh  run_message_edit_delete_test.sh  run_nostr_vanity.sh  run_restricted_chat_test.sh  run_two_temp_instances.sh  run_webrtc_test.sh  test-backup.sh  test-chat-1-1-image.sh  test-chat-image.sh  test-dm-desktop-to-android.sh  test-email-e2e.sh  test-plan-ble-androids.md  test-remote-chat-access.sh  test-remote-chat-image.sh  test-transfer-http-debug.sh  test-wallet-e2e.sh  test-wallet-signature.sh  test_helper.dart  thumbnail_generation_test.dart  tts_service_test.dart  voice_test.dart
tool/: update_version.dart
tools/: bundle_vcrt_dlls.bat  bundle_vcrt_dlls.ps1
web/: manifest.json
wiki/: CLI-Station-Installation.md  Community-and-Support.md  ESP32-Devices-and-Firmware.md  Home.md
windows/: CMakeLists.txt
(+1010 files in other folders)
