# Only build for ESP32-S3 targets
if(CONFIG_IDF_TARGET_ESP32S3)
    idf_component_register(
        SRCS "epaper_1in54.cpp"
        INCLUDE_DIRS "."
        REQUIRES driver log
        PRIV_REQUIRES heap freertos
    )
else()
    # Register empty component for non-ESP32S3 targets
    idf_component_register()
endif()
